# convlog

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md
R/: 000-wrappers.R  read.R  utils.R
inst/mjlog/: README.md
man/: convlog-package.Rd  read-tenhou6.Rd
src/: .gitignore  Makevars.in  Makevars.win.in  convlog-win.def  init.c
src/rust/: Cargo.toml  README.md  api.h
src/rust/src/: lib.rs  mjlog.rs
src/rust/src/tenhou/: mod.rs
tests/: testthat.R
tests/testthat/: test-equality.R  test-read.R
