[package]
name = "convlog"
version = "0.2.0"
authors = ["paithiov909", "Equim"]
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
savvy = "*"
serde_json = "1"
serde_tuple = "0.5"
serde_repr = "0.1"
thiserror = "1"
num_enum = "0.7"
ahash = "0.8"
serde_with = "3"
serde = { version = "1", features = ["derive"] }
quick-xml = "0.37.1"
urlencoding = "2.1.3"

[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery.
#
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
#
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "unwind"
